# ProjectEuler - Solutions to ProjectEuler problems
#
# Written in 2022 by Michael Rodriguez <mike@kaichiuchi.dev>
#
# To the extent possible under law, the author(s) have dedicated all copyright
# and related and neighboring rights to this software to the public domain
# worldwide. This software is distributed without any warranty.
#
# You should have received a copy of the CC0 Public Domain Dedication along with
# this software. If not, see
# <http://creativecommons.org/publicdomain/zero/1.0/>.

add_subdirectory(multiples_of_3_or_5)